--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
 <p>Bienvenidos Angular</p>
 
 <!-- <app-counter></app-counter> -->
-<app-heroes-hero></app-heroes-hero>
+<!-- <app-heroes-hero></app-heroes-hero> -->
 <app-heroes-list></app-heroes-list>
