--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<h1>{{title}}</h1>
+<!-- <h1>{{title}}</h1>
 <HR>
-<p>Bienvenidos Angular</p>
+<p>Bienvenidos Angular</p> -->
 
 <!-- <app-counter></app-counter> -->
 <!-- <app-heroes-hero></app-heroes-hero> -->
-<app-heroes-list></app-heroes-list>
+<!-- <app-heroes-list></app-heroes-list> -->
+<app-dbz-main-page></app-dbz-main-page>
